fix: hide number input spinners and prevent price field overflow in cart calculator

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,15 @@
     -webkit-tap-highlight-color: transparent;
     background-color: #faf8f5;
   }
+  /* Hide number input spinners */
+  input[type='number']::-webkit-inner-spin-button,
+  input[type='number']::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
+  input[type='number'] {
+    -moz-appearance: textfield;
+  }
 }
 
 @layer utilities {
